--- a/index.html
+++ b/index.html
@@ -224,7 +224,28 @@
         </div>
     </section>
 
-    <!-- Footer -->
+    <footer class="bg-celeste">
+        <div class="container">
+            <div class="row centrado ">
+                <p class="col-12 col-md-6 brand-text-footer">Viajes Chile</p>
+                <!-- favs -->
+                <div class="col-12 col-md-6 text-white">
+                    <div class=" footer-icon">
+                        <a href="https://github.com"><i class="fab fa-github-square fa-3x text-white"></i></a>
+                    </div>
+                    <div class=" footer-icon">
+                        <a href="https://twitter.com"><i class="fab fa-twitter-square fa-3x text-white"></i></a>
+                    </div>
+                    <div class=" footer-icon">
+                        <a href="https://www.linkedin.com"><i class="fab fa-linkedin fa-3x text-white"></i></a>
+                    </div>
+                    <div class=" footer-icon">
+                        <a href="https://www.facebook.com"><i class="fab fa-facebook-square fa-3x text-white"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
