se da formato al html y se revisa la web con liveserver para confirmar que las animaciones estén funcionales

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
                                 hasta escapadas de lujo, te garantizamos experiencias que te dejarán sin aliento. Confía
                                 en nosotros para planificar tu próximo viaje y haz que tus sueños se hagan realidad. Te
                                 llevamos a los lugares más hermosos de Chile para que tengas recuerdos para toda la
-                                vida.</p>
+                                vida.
+                            </p>
                         </div>
                     </div>
                     <div class="col-4">
@@ -122,7 +123,8 @@
                                 nuestros clientes. Con un equipo dedicado de expertos en destinos de todo el mundo, te
                                 garantizamos que cada viaje sea una aventura inolvidable. Confía en nosotros para hacer
                                 realidad tus sueños de viaje y descubre el placer de explorar nuevos horizontes con
-                                nosotros.</p>
+                                nosotros.
+                            </p>
                             <h5 id="montana" class="titulo bg-celeste centrado "><i class="fas fa-mountain"></i></h5>
                         </div>
                     </div>
@@ -159,9 +161,8 @@
                             <div class="card-body bg-celeste">
                                 <h5 class="titulo text-white">Parque nacional Torres del Paine</h5>
                                 <p class="card-text text-white">Descubre las imponentes Torres del Paine en el sur de
-                                    Chile.
-                                    Estas majestuosas formaciones rocosas ofrecen vistas espectaculares y aventuras
-                                    inolvidables en medio de la salvaje belleza de la Patagonia.</p>
+                                    Chile. Estas majestuosas formaciones rocosas ofrecen vistas espectaculares y
+                                    aventuras inolvidables en medio de la salvaje belleza de la Patagonia.</p>
                             </div>
                         </div>
                     </div>
@@ -172,9 +173,9 @@
                             <div class="card-body bg-celeste">
                                 <h5 class="titulo text-white">Desierto de Atacama</h5>
                                 <p class="card-text text-white">Explora la asombrosa belleza del Desierto de Atacama en
-                                    el
-                                    norte de Chile. Con dunas, salares y volcanes, ofrece una experiencia única y
-                                    sorprendente.</p>
+                                    el norte de Chile. Con dunas, salares y volcanes, ofrece una experiencia única y
+                                    sorprendente.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -185,9 +186,8 @@
                             <div class="card-body bg-celeste">
                                 <h5 class="titulo text-white">Salar de Atacama</h5>
                                 <p class="card-text text-white">Descubre la belleza única del Salar de Atacama en el
-                                    norte
-                                    de Chile. Con sus vastas extensiones salinas y paisajes surrealistas, te ofrece una
-                                    experiencia inolvidable en medio de la naturaleza más impresionante.</p>
+                                    norte de Chile. Con sus vastas extensiones salinas y paisajes surrealistas, te
+                                    ofrece una experiencia inolvidable en medio de la naturaleza más impresionante.</p>
                             </div>
                         </div>
                     </div>
@@ -198,8 +198,8 @@
                             <div class="card-body bg-celeste">
                                 <h5 class="titulo text-white">Bosques hermosos</h5>
                                 <p class="card-text text-white">Descubre la belleza única de los bosques de Chile. Desde
-                                    la
-                                    Patagonia hasta la Araucanía, te ofrecen una diversidad natural impresionante.</p>
+                                    la Patagonia hasta la Araucanía, te ofrecen una diversidad natural impresionante.
+                                </p>
                             </div>
                         </div>
                     </div>
