Se corrigen errores

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <textarea class="form-control" id="exampleFormControlTextarea1"
                         placeholder="Ingresa tu mensaje aquí" rows="8"></textarea>
                 </div>
-                <button type="button" class="boton btn btn-outline-primary" id="btnEnviar">Enviar</button>
+                <button type="button" class="boton btn" id="btnEnviar">Enviar</button>
             </div>
         </section>
     </article>
