cambios finales adicionales para que la página se visualice correctamente en ghpages

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 
     <!--css -->
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Viajes Chile</title>
 </head>
 
@@ -267,7 +267,7 @@
         crossorigin="anonymous"></script>
 
     <!-- js -->
-    <script src="/assets/js/script.js"></script>
+    <script src="assets/css/script.js"></script>
 </body>
 
 </html>
