--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <span id="nav-mundo" class="align-middle brand-text-nav">
-                    <img id="logo-mundo" src="/assets/img/viajes.svg" height="45px" alt="Logo" class="logoviajes"
+                    <img id="logo-mundo" src="assets/img/viajes.svg" height="45px" alt="Logo" class="logoviajes"
                         style="vertical-align: middle;">
                     Viajes Chile
                 </span>
@@ -69,13 +69,13 @@
             <div id="carouselExampleControls" class="carousel slide my-carousel" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./assets/img/carousel1.jpg" class="d-block w-100 mycarousel-img" alt="img1">
+                        <img src="/assets/img/carousel1.jpg" class="d-block w-100 mycarousel-img" alt="img1">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/img/carousel2.jpg" class="d-block w-100 mycarousel-img" alt="img2">
+                        <img src="assets/img/carousel2.jpg" class="d-block w-100 mycarousel-img" alt="img2">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/img/carousel3.jpg" class="d-block w-100 mycarousel-img" alt="img3">
+                        <img src="assets/img/carousel3.jpg" class="d-block w-100 mycarousel-img" alt="img3">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -157,7 +157,7 @@
                     <!-- card1 -->
                     <div class="col-12 col-md-3 d-flex align-items-stretch">
                         <div class="card card-hover">
-                            <img src="./assets/img/card1.jpg" class="card-img-top" alt="torresdelpaine">
+                            <img src="/assets/img/card1.jpg" class="card-img-top" alt="torresdelpaine">
                             <div class="card-body bg-celeste">
                                 <h5 class="titulo text-white">Parque nacional Torres del Paine</h5>
                                 <p class="card-text text-white">Descubre las imponentes Torres del Paine en el sur de
@@ -169,7 +169,7 @@
                     <!-- card 2-->
                     <div class="col-12 col-md-3 d-flex align-items-stretch">
                         <div class="card card-hover">
-                            <img src="./assets/img/card2.jpg" class="card-img-top" alt="desierto">
+                            <img src="assets/img/card2.jpg" class="card-img-top" alt="desierto">
                             <div class="card-body bg-celeste">
                                 <h5 class="titulo text-white">Desierto de Atacama</h5>
                                 <p class="card-text text-white">Explora la asombrosa belleza del Desierto de Atacama en
@@ -182,7 +182,7 @@
                     <!-- card 3 -->
                     <div class="col-12 col-md-3 d-flex align-items-stretch">
                         <div class="card card-hover">
-                            <img src="./assets/img/card3.jpg" class="card-img-top" alt="salar">
+                            <img src="assets/img/card3.jpg" class="card-img-top" alt="salar">
                             <div class="card-body bg-celeste">
                                 <h5 class="titulo text-white">Salar de Atacama</h5>
                                 <p class="card-text text-white">Descubre la belleza única del Salar de Atacama en el
@@ -194,7 +194,7 @@
                     <!-- card 4-->
                     <div class="col-12 col-md-3 d-flex align-items-stretch">
                         <div class="card card-hover">
-                            <img src="./assets/img/card4.jpg" class="card-img-top" alt="bosques">
+                            <img src="assets/img/card4.jpg" class="card-img-top" alt="bosques">
                             <div class="card-body bg-celeste">
                                 <h5 class="titulo text-white">Bosques hermosos</h5>
                                 <p class="card-text text-white">Descubre la belleza única de los bosques de Chile. Desde
@@ -267,7 +267,7 @@
         crossorigin="anonymous"></script>
 
     <!-- js -->
-    <script src="assets/css/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
