--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div id="carouselExampleControls" class="carousel slide my-carousel" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/assets/img/carousel1.jpg" class="d-block w-100 mycarousel-img" alt="img1">
+                        <img src="assets/img/carousel1.jpg" class="d-block w-100 mycarousel-img" alt="img1">
                     </div>
                     <div class="carousel-item">
                         <img src="assets/img/carousel2.jpg" class="d-block w-100 mycarousel-img" alt="img2">
