Errores en img de torres

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <!-- card1 -->
                     <div class="col-12 col-md-3 d-flex align-items-stretch">
                         <div class="card card-hover">
-                            <img src="/assets/img/card1.jpg" class="card-img-top" alt="torresdelpaine">
+                            <img src="assets/img/card1.jpg" class="card-img-top" alt="torresdelpaine">
                             <div class="card-body bg-celeste">
                                 <h5 class="titulo text-white">Parque nacional Torres del Paine</h5>
                                 <p class="card-text text-white">Descubre las imponentes Torres del Paine en el sur de
